--- a/main.html
+++ b/main.html
@@ -8,6 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+	<p>First paragraph</p>
+	<p> The gentle breeze carried the scent of blooming flowers, weaving through the quiet streets like an unseen melody. As dusk settled, the world seemed to pause, wrapped in the serenity of the fading light.</p>
+	<p>The waves crashed against the shore, their rhythm a soothing lullaby under the moonlit sky. Shadows of clouds drifted above, casting fleeting shapes on the endless expanse of the sea.</p>
+	
+		
+	</div>
+	
+		<ul>
+			<li>First item</li>
+			<li>Second item</li>
+			<li>Third item</li>
+			<li>Fourth item</li>
+			<li>Fifth item</li>
+		</ul>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
